fixes image spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 .row {
-  height: 680px;
   background-repeat: no-repeat;
 }
 
@@ -7,6 +6,8 @@
   background-image: url("../images/beach_postcard.png");
   background-size: 100%;
   margin-left: 0px;
+  margin-top: 25px;
+  height: 675px;
 }
 
 #start-textbox1 {
@@ -31,6 +32,7 @@
 
 #row2 {
 /*  background-color: #F5F4D3;*/
+  height: 680px;
   background-image: url("../images/wilshire_postcard.png");
   background-size: 100%;
 }
@@ -58,6 +60,7 @@
   background-image: url("../images/hollywood_postcard.png");
   margin-left: 0px;
   background-size: 100%;
+  height: 680px;
 }
 
 #start-textbox3 {
